Add kube-proxy, remove coredns, add ebs-csi-driver policy to eks_managed_node_groups

--- a/phase-3-eks/manifest-json-1/deployment.yaml
+++ b/phase-3-eks/manifest-json-1/deployment.yaml
@@ -25,6 +25,7 @@ spec:
         runAsUser: 1000
         runAsGroup: 1000
         runAsNonRoot: true
+        fsGroup: 1000
       volumes:
       - name: n8n-pvc
         persistentVolumeClaim:
