--- a/phase-3-eks/manifest-json-0/deployment.yaml
+++ b/phase-3-eks/manifest-json-0/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: n8n
-  namespace: n8n
 spec:
   replicas: 1
   selector:
@@ -13,19 +12,23 @@ spec:
       labels:
         app: n8n
     spec:
-      containers:
-      - name: n8n
-        image: docker.n8n.io/n8nio/n8n:latest
-        ports:
-        - containerPort: 5678
-        volumeMounts:
-        - name: n8n-pvc
-          mountPath: /home/node/.n8n
       securityContext:
         runAsUser: 1000
         runAsGroup: 1000
-        runAsNonRoot: true
         fsGroup: 1000
+      containers:
+      - name: n8n
+        image: docker.n8n.io/n8nio/n8n:2.3.4
+        ports:
+        - containerPort: 3000
+        envFrom:
+        - configMapRef:
+            name: n8n-cm
+        volumeMounts:
+        - name: n8n-pvc
+          mountPath: /home/node/.n8n
+        securityContext:
+          allowPrivilegeEscalation: false
       volumes:
       - name: n8n-pvc
         persistentVolumeClaim:
