--- a/phase-3-eks/manifest-json-0/service.yaml
+++ b/phase-3-eks/manifest-json-0/service.yaml
@@ -2,10 +2,9 @@ apiVersion: v1
 kind: Service
 metadata:
   name: n8n
-  namespace: n8n
 spec:
   ports:
-  - port: 5678
+  - port: 3000
   selector:
     app: n8n
-  type: ClusterIP
+  type: LoadBalancer
