--- a/phase-3-eks/manifest-json-0/configmap.yaml
+++ b/phase-3-eks/manifest-json-0/configmap.yaml
@@ -8,3 +8,4 @@ data:
   N8N_PORT: "3000"
   N8N_ENFORCE_SETTINGS_FILE_PERMISSIONS: "true"
   N8N_RUNNERS_ENABLED: "true"
+  N8N_SECURE_COOKIE: "false"
