--- a/phase-4-eks/manifest-json-0/deployment.yaml
+++ b/phase-4-eks/manifest-json-0/deployment.yaml
@@ -34,6 +34,7 @@ spec:
           readOnly: true
         securityContext:
           allowPrivilegeEscalation: false
+      serviceAccountName: n8n-sa
       volumes:
       - name: n8n-pvc
         persistentVolumeClaim:
