--- a/phase-4-eks/manifest-json-0/secrets.yaml
+++ b/phase-4-eks/manifest-json-0/secrets.yaml
@@ -6,13 +6,17 @@ spec:
   provider: aws
   parameters:
     objects: |
-      array:
-        - |
-          objectName: "db-user"
-          objectType: "secretsmanager"
-        - |
-          objectName: "db-password"
-          objectType: "secretsmanager"
+      - objectName: "db-credentials"
+        objectType: "secretsmanager"
+        jmesPath:
+          - path: "db_user"
+            objectAlias: "db-user"
+          - path: "db_password"
+            objectAlias: "db-password"
+          - path: "db_host"
+            objectAlias: "db-host"
+          - path: "db_name"
+            objectAlias: "db-name"
   secretObjects:
     - secretName: n8n-container-env
       type: Opaque
@@ -21,3 +25,7 @@ spec:
           key: DB_POSTGRESDB_USER
         - objectName: db-password
           key: DB_POSTGRESDB_PASSWORD
+        - objectName: db-host
+          key: DB_POSTGRESDB_HOST
+        - objectName: db-name
+          key: DB_POSTGRESDB_DATABASE
